<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Sports</string>
    <string name="title_activity_activity_inscription">Registration</string>
    <string name="title_activity_recherche">Search a group</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup"><u>Sign up now!</u></string>
    <string name="lostPassword"><u>Forgot password ?</u></string>
    <string name="title_activity_inscription">Registration</string>
    <string name="inscr">Registration</string>
    <string name="name">Name</string>
    <string name="firstname">Firstname</string>
    <string name="pseudo">Pseudo</string>
    <string name="confPass">Confirm password</string>
    <string name="naiss">Date of birth</string>
    <string name="couleurbackground">#3D9EFE</string>
    <string name="day">DD</string>
    <string name="month">MM</string>
    <string name="year">YYYY</string>
    <string name="gender">Gender</string>
    <string name="radioM">Male</string>
    <string name="radioF">Female</string>
    <string name="email">Email</string>
    <string name="choosesport">Choose your 3 favorite sports</string>
    <string name="inscriOK">Validate registration</string>
    <string name="passNotEqual">Password and confirm aren\'t the same!</string>
    <string name="chooseDifferent">Please, choose different sports</string>
    <string name="userCreate">Congratulations, account created !</string>
    <string name="searchGroup">Search your group here!</string>
    <string name="title_activity_gpe_inscription">Group registration</string>
    <string name="enterPassword">Please enter the group\'s password :</string>
    <string name="validation">Validation</string>
    <string name="wrongPass">Wrong password !</string>
    <string name="charging">Charging</string>
    <string name="echecCo">Connection failure !</string>
    <string name="gpesNoFound">Group not found!</string>
    <string name="inscriValide">Registration complete !</string>
    <string name="echecParti">Creation participant failure!</string>
    <string name="sportNoFound">Sports not found !</string>
    <string name="errorCreation">Error during creation</string>
    <string name="userNotFound">User not found!</string>
    <string name="groupsNotFound">Groups not found !</string>
    <string name="noGroups">No groups found here !</string>
    <string name="inscriOui">You\'re a participant of the group</string>
    <string name="emailUtilise">Email already used !</string>
    <string name="pseudoUtilise">Pseudo already used !</string>

</resources>
