<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.condorcet.projetgroupe6.GpeInscription" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:gravity="center">

        <TextView
            android:id="@+id/nomGpe"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/nomAdmin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/enterPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enterPassword" />
        <EditText 
            android:id="@+id/passEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/validationGpe"
        style="@style/connectB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/validation"
        android:onClick="validInscription" />

</RelativeLayout>