<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.testunprojet.MainActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logoaccueil1" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/linearLayout1"
            android:text="@string/login" />

        <EditText
            android:id="@+id/loginE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login"
            android:layout_marginLeft="36dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/linearLayout1"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login"
            android:layout_marginLeft="36dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/connectB"
            style="@style/connectB"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColorHint="@color/BackgroundCB"
            android:textColorLink="@color/textColorCB" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

	        <TextView
	        android:id="@+id/signup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/signup"
	        android:clickable="true" />
	        
	         <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" | " />
	         
	        <TextView
	            android:id="@+id/lostPassword"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lostPassword" />

   	 	</LinearLayout>

</RelativeLayout>
